--- a/app/startscreen.ui
+++ b/app/startscreen.ui
@@ -13,13 +13,13 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>20</x>
      <y>10</y>
-     <width>761</width>
-     <height>510</height>
+     <width>751</width>
+     <height>511</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -71,8 +71,8 @@
        <widget class="CQtOpenCVViewerGl" name="inputWindow" native="true">
         <property name="minimumSize">
          <size>
-          <width>330</width>
-          <height>360</height>
+          <width>400</width>
+          <height>300</height>
          </size>
         </property>
        </widget>
